--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
         </div>
         <div class="simon-startbutton menu">START</div>
       </div>
+      <script src="logic.js"></script>
 </body>
 </html>
