--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="simon-wrapper">
         <h1 class="honk-titulo">SIMON SAYS</h1>
+        <div class="simon-levelbutton menu">0/20</div>
         <div class="simon-container">
           <div class="simon-button green"></div>
           <div class="simon-button red"></div>
